[gd_scene load_steps=7 format=4 uid="uid://bvq3fypmpsg76"]

[ext_resource type="Script" uid="uid://dxyuu27f87ovs" path="res://Start Scenes/settings.gd" id="1_1fktl"]
[ext_resource type="FontFile" uid="uid://mb8b1post4hv" path="res://BitPotion.ttf" id="1_y4ltk"]
[ext_resource type="TileSet" uid="uid://r0ri75icqk0k" path="res://Tile_Set_Ground.tres" id="2_1fktl"]
[ext_resource type="Texture2D" uid="uid://damikrublmbp0" path="res://Sprites/Buttons.png" id="3_eguyv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u24ml"]
atlas = ExtResource("3_eguyv")
region = Rect2(63.7665, 36.8037, 32.189, 22.3924)

[sub_resource type="AtlasTexture" id="AtlasTexture_jswfg"]
atlas = ExtResource("3_eguyv")
region = Rect2(95.9555, 36.8037, 32.0445, 22.3924)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1fktl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -519.0
offset_top = -290.5
offset_right = 519.0
offset_bottom = 290.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.67, 0.604228, 0.4623, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
layout_mode = 0
offset_right = 505.0
offset_bottom = 168.0
theme_override_fonts/normal_font = ExtResource("1_y4ltk")
theme_override_font_sizes/normal_font_size = 200
text = "Settings:"

[node name="Mute_Label" type="Label" parent="ColorRect"]
layout_mode = 2
offset_left = 508.0
offset_top = 174.5
offset_right = 639.0
offset_bottom = 254.5
theme_override_fonts/font = ExtResource("1_y4ltk")
theme_override_font_sizes/font_size = 100
text = "Mute"

[node name="Mute" type="CheckBox" parent="ColorRect"]
layout_mode = 2
offset_left = 638.0
offset_top = 183.0
offset_right = 662.0
offset_bottom = 207.0
scale = Vector2(3.04, 3.24)

[node name="Volume_Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 7.0
offset_top = 148.5
offset_right = 195.0
offset_bottom = 228.5
theme_override_fonts/font = ExtResource("1_y4ltk")
theme_override_font_sizes/font_size = 100
text = "Volume"

[node name="Volume" type="HSlider" parent="ColorRect"]
layout_mode = 2
offset_left = 6.0
offset_top = 221.0
offset_right = 1036.0
offset_bottom = 250.0
scale = Vector2(0.474693, 1.10023)
max_value = 10.0
step = 0.1
value = 10.0

[node name="Brightness_Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 7.0
offset_top = 235.5
offset_right = 307.0
offset_bottom = 315.5
theme_override_fonts/font = ExtResource("1_y4ltk")
theme_override_font_sizes/font_size = 100
text = "Brightness"

[node name="Brightness" type="HSlider" parent="ColorRect"]
layout_mode = 2
offset_left = 6.0
offset_top = 314.0
offset_right = 1036.0
offset_bottom = 343.0
scale = Vector2(0.474693, 1.10023)
min_value = 0.1
max_value = 1.0
step = 0.01
value = 1.0

[node name="Back Button" type="TextureButton" parent="ColorRect"]
layout_mode = 0
offset_top = 482.0
offset_right = 198.0
offset_bottom = 579.0
texture_normal = SubResource("AtlasTexture_u24ml")
texture_pressed = SubResource("AtlasTexture_jswfg")
stretch_mode = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TileMapLayer" type="TileMapLayer" parent="CanvasLayer"]
tile_map_data = PackedByteArray("AAAAAAAAAgACAAAAAAAAAAEAAgACAAAAAAABAAEAAgAEAAAAAAABAAIAAgAEAAAAAAACAAIAAgACAAAAAAACAAMAAgACAAAAAAADAAMAAgACAAAAAAADAAQAAgACAAAAAAAEAAQAAgACAAAAAAAEAAUAAgACAAAAAAAAAAIAAgACAAAAAAAAAAMAAgACAAAAAAAAAAQAAgACAAAAAAAAAAUAAgACAAAAAAAAAAYAAgACAAAAAAAAAAcAAgACAAAAAAAAAAgAAgACAAAAAAAAAAkAAgACAAAAAAAAAAoAAgACAAAAAAAAAAsAAgACAAAAAAAAAAwAAgACAAAAAAAAAA0AAgACAAAAAAAAAA4AAgACAAAAAAAAAA8AAgACAAAAAAAAABAAAgACAAAAAAAAABEAAgACAAAAAAAAABIAAgACAAAAAAAAABMAAgACAAAAAAABAAAAAgACAAAAAAABAAMAAgAEAAAAAAABAAQAAgAEAAAAAAABAAUAAgAEAAAAAAABAAYAAgAEAAAAAAABAAcAAgAEAAAAAAABAAgAAgAEAAAAAAABAAkAAgAEAAAAAAABAAoAAgAEAAAAAAABAAsAAgAEAAAAAAABAAwAAgAEAAAAAAABAA0AAgAEAAAAAAABAA4AAgAEAAAAAAABAA8AAgAEAAAAAAABABAAAgAEAAAAAAABABEAAgAEAAAAAAABABIAAgAEAAAAAAABABMAAgACAAAAAAACAAAAAgACAAAAAAACAAEAAgACAAAAAAACAAQAAgACAAAAAAACAAUAAgACAAAAAAACAAYAAgACAAAAAAACAAcAAgACAAAAAAACAAgAAgACAAAAAAACAAkAAgACAAAAAAACAAoAAgACAAAAAAACAAsAAgACAAAAAAACAAwAAgACAAAAAAACAA0AAgACAAAAAAACAA4AAgACAAAAAAACAA8AAgACAAAAAAACABAAAgACAAAAAAACABEAAgACAAAAAAACABIAAgACAAAAAAACABMAAgACAAAAAAADAAAAAgACAAAAAAADAAEAAgACAAAAAAADAAIAAgACAAAAAAADAAUAAgACAAAAAAADAAYAAgACAAAAAAADAAcAAgACAAAAAAADAAgAAgACAAAAAAADAAkAAgACAAAAAAADAAoAAgACAAAAAAADAAsAAgACAAAAAAADAAwAAgACAAAAAAADAA0AAgACAAAAAAADAA4AAgACAAAAAAADAA8AAgACAAAAAAADABAAAgACAAAAAAADABEAAgACAAAAAAADABIAAgACAAAAAAADABMAAgACAAAAAAAEAAAAAgACAAAAAAAEAAEAAgACAAAAAAAEAAIAAgACAAAAAAAEAAMAAgACAAAAAAAEAAYAAgACAAAAAAAEAAcAAgACAAAAAAAEAAgAAgACAAAAAAAEAAkAAgACAAAAAAAEAAoAAgACAAAAAAAEAAsAAgACAAAAAAAEAAwAAgACAAAAAAAEAA0AAgACAAAAAAAEAA4AAgACAAAAAAAEAA8AAgACAAAAAAAEABAAAgACAAAAAAAEABEAAgACAAAAAAAEABIAAgACAAAAAAAEABMAAgACAAAAAAAFAAAAAgACAAAAAAAFAAEAAgACAAAAAAAFAAIAAgACAAAAAAAFAAMAAgACAAAAAAAFAAQAAgACAAAAAAAFAAUAAgACAAAAAAAFAAYAAgACAAAAAAAFAAcAAgACAAAAAAAFAAgAAgACAAAAAAAFAAkAAgACAAAAAAAFAAoAAgACAAAAAAAFAAsAAgACAAAAAAAFAAwAAgACAAAAAAAFAA0AAgACAAAAAAAFAA4AAgACAAAAAAAFAA8AAgACAAAAAAAFABAAAgACAAAAAAAFABEAAgACAAAAAAAFABIAAgACAAAAAAAFABMAAgACAAAAAAAGAAAAAgACAAAAAAAGAAEAAgACAAAAAAAGAAIAAgACAAAAAAAGAAMAAgACAAAAAAAGAAQAAgACAAAAAAAGAAUAAgACAAAAAAAGAAYAAgACAAAAAAAGAAcAAgACAAAAAAAGAAgAAgACAAAAAAAGAAkAAgACAAAAAAAGAAoAAgACAAAAAAAGAAsAAgACAAAAAAAGAAwAAgACAAAAAAAGAA0AAgACAAAAAAAGAA4AAgACAAAAAAAGAA8AAgACAAAAAAAGABAAAgACAAAAAAAGABEAAgACAAAAAAAGABIAAgACAAAAAAAGABMAAgACAAAAAAAHAAAAAgACAAAAAAAHAAEAAgACAAAAAAAHAAIAAgACAAAAAAAHAAMAAgACAAAAAAAHAAQAAgACAAAAAAAHAAUAAgACAAAAAAAHAAYAAgACAAAAAAAHAAcAAgACAAAAAAAHAAgAAgACAAAAAAAHAAkAAgACAAAAAAAHAAoAAgACAAAAAAAHAAsAAgACAAAAAAAHAAwAAgACAAAAAAAHAA0AAgACAAAAAAAHAA4AAgACAAAAAAAHAA8AAgACAAAAAAAHABAAAgACAAAAAAAHABEAAgACAAAAAAAHABIAAgACAAAAAAAHABMAAgACAAAAAAAIAAAAAgACAAAAAAAIAAEAAgACAAAAAAAIAAIAAgACAAAAAAAIAAMAAgACAAAAAAAIAAQAAgACAAAAAAAIAAUAAgACAAAAAAAIAAYAAgACAAAAAAAIAAcAAgACAAAAAAAIAAgAAgACAAAAAAAIAAkAAgACAAAAAAAIAAoAAgACAAAAAAAIAAsAAgACAAAAAAAIAAwAAgACAAAAAAAIAA0AAgACAAAAAAAIAA4AAgACAAAAAAAIAA8AAgACAAAAAAAIABAAAgACAAAAAAAIABEAAgACAAAAAAAIABIAAgACAAAAAAAIABMAAgACAAAAAAAJAAAAAgACAAAAAAAJAAEAAgACAAAAAAAJAAIAAgACAAAAAAAJAAMAAgACAAAAAAAJAAQAAgACAAAAAAAJAAUAAgACAAAAAAAJAAYAAgACAAAAAAAJAAcAAgACAAAAAAAJAAgAAgACAAAAAAAJAAkAAgACAAAAAAAJAAoAAgACAAAAAAAJAAsAAgACAAAAAAAJAAwAAgACAAAAAAAJAA0AAgACAAAAAAAJAA4AAgACAAAAAAAJAA8AAgACAAAAAAAJABAAAgACAAAAAAAJABEAAgACAAAAAAAJABIAAgACAAAAAAAJABMAAgACAAAAAAAKAAAAAgACAAAAAAAKAAEAAgACAAAAAAAKAAIAAgACAAAAAAAKAAMAAgACAAAAAAAKAAQAAgACAAAAAAAKAAUAAgACAAAAAAAKAAYAAgACAAAAAAAKAAcAAgACAAAAAAAKAAgAAgACAAAAAAAKAAkAAgACAAAAAAAKAAoAAgACAAAAAAAKAAsAAgACAAAAAAAKAAwAAgACAAAAAAAKAA0AAgACAAAAAAAKAA4AAgACAAAAAAAKAA8AAgACAAAAAAAKABAAAgACAAAAAAAKABEAAgACAAAAAAAKABIAAgACAAAAAAAKABMAAgACAAAAAAALAAAAAgACAAAAAAALAAEAAgACAAAAAAALAAIAAgACAAAAAAALAAMAAgACAAAAAAALAAQAAgACAAAAAAALAAUAAgACAAAAAAALAAYAAgACAAAAAAALAAcAAgACAAAAAAALAAgAAgACAAAAAAALAAkAAgACAAAAAAALAAoAAgACAAAAAAALAAsAAgACAAAAAAALAAwAAgACAAAAAAALAA0AAgACAAAAAAALAA4AAgACAAAAAAALAA8AAgACAAAAAAALABAAAgACAAAAAAALABEAAgACAAAAAAALABIAAgACAAAAAAALABMAAgACAAAAAAAMAAAAAgACAAAAAAAMAAEAAgACAAAAAAAMAAIAAgACAAAAAAAMAAMAAgACAAAAAAAMAAQAAgACAAAAAAAMAAUAAgACAAAAAAAMAAYAAgACAAAAAAAMAAcAAgACAAAAAAAMAAgAAgACAAAAAAAMAAkAAgACAAAAAAAMAAoAAgACAAAAAAAMAAsAAgACAAAAAAAMAAwAAgACAAAAAAAMAA0AAgACAAAAAAAMAA4AAgACAAAAAAAMAA8AAgACAAAAAAAMABAAAgACAAAAAAAMABEAAgACAAAAAAAMABIAAgACAAAAAAAMABMAAgACAAAAAAANAAAAAgACAAAAAAANAAEAAgACAAAAAAANAAIAAgACAAAAAAANAAMAAgACAAAAAAANAAQAAgACAAAAAAANAAUAAgACAAAAAAANAAYAAgACAAAAAAANAAcAAgACAAAAAAANAAgAAgACAAAAAAANAAkAAgACAAAAAAANAAoAAgACAAAAAAANAAsAAgACAAAAAAANAAwAAgACAAAAAAANAA0AAgACAAAAAAANAA4AAgACAAAAAAANAA8AAgACAAAAAAANABAAAgACAAAAAAANABEAAgACAAAAAAANABIAAgACAAAAAAANABMAAgACAAAAAAAOAAAAAgACAAAAAAAOAAEAAgACAAAAAAAOAAIAAgACAAAAAAAOAAMAAgACAAAAAAAOAAQAAgACAAAAAAAOAAUAAgACAAAAAAAOAAYAAgACAAAAAAAOAAcAAgACAAAAAAAOAAgAAgACAAAAAAAOAAkAAgACAAAAAAAOAAoAAgACAAAAAAAOAAsAAgACAAAAAAAOAAwAAgACAAAAAAAOAA0AAgACAAAAAAAOAA4AAgACAAAAAAAOAA8AAgACAAAAAAAOABAAAgACAAAAAAAOABEAAgACAAAAAAAOABIAAgACAAAAAAAOABMAAgACAAAAAAAPAAAAAgACAAAAAAAPAAEAAgACAAAAAAAPAAIAAgACAAAAAAAPAAMAAgACAAAAAAAPAAQAAgACAAAAAAAPAAUAAgACAAAAAAAPAAYAAgACAAAAAAAPAAcAAgACAAAAAAAPAAgAAgACAAAAAAAPAAkAAgACAAAAAAAPAAoAAgACAAAAAAAPAAsAAgACAAAAAAAPAAwAAgACAAAAAAAPAA0AAgACAAAAAAAPAA4AAgACAAAAAAAPAA8AAgACAAAAAAAPABAAAgACAAAAAAAPABEAAgACAAAAAAAPABIAAgACAAAAAAAPABMAAgACAAAAAAAQAAAAAgACAAAAAAAQAAEAAgACAAAAAAAQAAIAAgACAAAAAAAQAAMAAgACAAAAAAAQAAQAAgACAAAAAAAQAAUAAgACAAAAAAAQAAYAAgACAAAAAAAQAAcAAgACAAAAAAAQAAgAAgACAAAAAAAQAAkAAgACAAAAAAAQAAoAAgACAAAAAAAQAAsAAgACAAAAAAAQAAwAAgACAAAAAAAQAA0AAgACAAAAAAAQAA4AAgACAAAAAAAQAA8AAgACAAAAAAAQABAAAgACAAAAAAAQABEAAgACAAAAAAAQABIAAgACAAAAAAAQABMAAgACAAAAAAARAAAAAgACAAAAAAARAAEAAgACAAAAAAARAAIAAgACAAAAAAARAAMAAgACAAAAAAARAAQAAgACAAAAAAARAAUAAgACAAAAAAARAAYAAgACAAAAAAARAAcAAgACAAAAAAARAAgAAgACAAAAAAARAAkAAgACAAAAAAARAAoAAgACAAAAAAARAAsAAgACAAAAAAARAAwAAgACAAAAAAARAA0AAgACAAAAAAARAA4AAgACAAAAAAARAA8AAgACAAAAAAARABAAAgACAAAAAAARABEAAgACAAAAAAARABIAAgACAAAAAAARABMAAgACAAAAAAASAAAAAgACAAAAAAASAAEAAgACAAAAAAASAAIAAgACAAAAAAASAAMAAgACAAAAAAASAAQAAgACAAAAAAASAAUAAgACAAAAAAASAAYAAgACAAAAAAASAAcAAgACAAAAAAASAAgAAgACAAAAAAASAAkAAgACAAAAAAASAAoAAgACAAAAAAASAAsAAgACAAAAAAASAAwAAgACAAAAAAASAA0AAgACAAAAAAASAA4AAgACAAAAAAASAA8AAgACAAAAAAASABAAAgACAAAAAAASABEAAgACAAAAAAASABIAAgACAAAAAAASABMAAgACAAAAAAATAAAAAgACAAAAAAATAAEAAgACAAAAAAATAAIAAgACAAAAAAATAAMAAgACAAAAAAATAAQAAgACAAAAAAATAAUAAgACAAAAAAATAAYAAgACAAAAAAATAAcAAgACAAAAAAATAAgAAgACAAAAAAATAAkAAgACAAAAAAATAAoAAgACAAAAAAATAAsAAgACAAAAAAATAAwAAgACAAAAAAATAA0AAgACAAAAAAATAA4AAgACAAAAAAATAA8AAgACAAAAAAATABAAAgACAAAAAAATABEAAgACAAAAAAATABIAAgACAAAAAAATABMAAgACAAAAAAAUAAAAAgACAAAAAAAUAAEAAgACAAAAAAAUAAIAAgACAAAAAAAUAAMAAgACAAAAAAAUAAQAAgACAAAAAAAUAAUAAgACAAAAAAAUAAYAAgACAAAAAAAUAAcAAgACAAAAAAAUAAgAAgACAAAAAAAUAAkAAgACAAAAAAAUAAoAAgACAAAAAAAUAAsAAgACAAAAAAAUAAwAAgACAAAAAAAUAA0AAgACAAAAAAAUAA4AAgACAAAAAAAUAA8AAgACAAAAAAAUABAAAgACAAAAAAAUABEAAgACAAAAAAAUABIAAgACAAAAAAAUABMAAgACAAAAAAAVAAAAAgACAAAAAAAVAAEAAgACAAAAAAAVAAIAAgACAAAAAAAVAAMAAgACAAAAAAAVAAQAAgACAAAAAAAVAAUAAgACAAAAAAAVAAYAAgACAAAAAAAVAAcAAgACAAAAAAAVAAgAAgACAAAAAAAVAAkAAgACAAAAAAAVAAoAAgACAAAAAAAVAAsAAgACAAAAAAAVAAwAAgACAAAAAAAVAA0AAgACAAAAAAAVAA4AAgACAAAAAAAVAA8AAgACAAAAAAAVABAAAgACAAAAAAAVABEAAgACAAAAAAAVABIAAgACAAAAAAAVABMAAgACAAAAAAAWAAAAAgACAAAAAAAWAAEAAgACAAAAAAAWAAIAAgACAAAAAAAWAAMAAgACAAAAAAAWAAQAAgACAAAAAAAWAAUAAgACAAAAAAAWAAYAAgACAAAAAAAWAAcAAgACAAAAAAAWAAgAAgACAAAAAAAWAAkAAgACAAAAAAAWAAoAAgACAAAAAAAWAAsAAgACAAAAAAAWAAwAAgACAAAAAAAWAA0AAgACAAAAAAAWAA4AAgACAAAAAAAWAA8AAgACAAAAAAAWABAAAgACAAAAAAAWABEAAgACAAAAAAAWABIAAgACAAAAAAAWABMAAgACAAAAAAAXAAAAAgACAAAAAAAXAAEAAgACAAAAAAAXAAIAAgACAAAAAAAXAAMAAgACAAAAAAAXAAQAAgACAAAAAAAXAAUAAgACAAAAAAAXAAYAAgACAAAAAAAXAAcAAgACAAAAAAAXAAgAAgACAAAAAAAXAAkAAgACAAAAAAAXAAoAAgACAAAAAAAXAAsAAgACAAAAAAAXAAwAAgACAAAAAAAXAA0AAgACAAAAAAAXAA4AAgACAAAAAAAXAA8AAgACAAAAAAAXABAAAgACAAAAAAAXABEAAgACAAAAAAAXABIAAgACAAAAAAAXABMAAgACAAAAAAAYAAAAAgACAAAAAAAYAAEAAgACAAAAAAAYAAIAAgACAAAAAAAYAAMAAgACAAAAAAAYAAQAAgACAAAAAAAYAAUAAgACAAAAAAAYAAYAAgACAAAAAAAYAAcAAgACAAAAAAAYAAgAAgACAAAAAAAYAAkAAgACAAAAAAAYAAoAAgACAAAAAAAYAAsAAgACAAAAAAAYAAwAAgACAAAAAAAYAA0AAgACAAAAAAAYAA4AAgACAAAAAAAYAA8AAgACAAAAAAAYABAAAgACAAAAAAAYABEAAgACAAAAAAAYABIAAgACAAAAAAAYABMAAgACAAAAAAAZAAAAAgACAAAAAAAZAAEAAgACAAAAAAAZAAIAAgACAAAAAAAZAAMAAgACAAAAAAAZAAQAAgACAAAAAAAZAAUAAgACAAAAAAAZAAYAAgACAAAAAAAZAAcAAgACAAAAAAAZAAgAAgACAAAAAAAZAAkAAgACAAAAAAAZAAoAAgACAAAAAAAZAAsAAgACAAAAAAAZAAwAAgACAAAAAAAZAA0AAgACAAAAAAAZAA4AAgACAAAAAAAZAA8AAgACAAAAAAAZABAAAgACAAAAAAAZABEAAgACAAAAAAAZABIAAgACAAAAAAAZABMAAgACAAAAAAAaAAAAAgACAAAAAAAaAAEAAgACAAAAAAAaAAIAAgACAAAAAAAaAAMAAgACAAAAAAAaAAQAAgACAAAAAAAaAAUAAgACAAAAAAAaAAYAAgACAAAAAAAaAAcAAgACAAAAAAAaAAgAAgACAAAAAAAaAAkAAgACAAAAAAAaAAoAAgACAAAAAAAaAAsAAgACAAAAAAAaAAwAAgACAAAAAAAaAA0AAgACAAAAAAAaAA4AAgACAAAAAAAaAA8AAgACAAAAAAAaABAAAgACAAAAAAAaABEAAgACAAAAAAAaABIAAgACAAAAAAAaABMAAgACAAAAAAAbAAAAAgACAAAAAAAbAAEAAgACAAAAAAAbAAIAAgACAAAAAAAbAAMAAgACAAAAAAAbAAQAAgACAAAAAAAbAAUAAgACAAAAAAAbAAYAAgACAAAAAAAbAAcAAgACAAAAAAAbAAgAAgACAAAAAAAbAAkAAgACAAAAAAAbAAoAAgACAAAAAAAbAAsAAgACAAAAAAAbAAwAAgACAAAAAAAbAA0AAgACAAAAAAAbAA4AAgACAAAAAAAbAA8AAgACAAAAAAAbABAAAgACAAAAAAAbABEAAgACAAAAAAAbABIAAgACAAAAAAAbABMAAgACAAAAAAAcAAAAAgACAAAAAAAcAAEAAgACAAAAAAAcAAIAAgACAAAAAAAcAAMAAgACAAAAAAAcAAQAAgACAAAAAAAcAAUAAgACAAAAAAAcAAYAAgACAAAAAAAcAAcAAgACAAAAAAAcAAgAAgACAAAAAAAcAAkAAgACAAAAAAAcAAoAAgACAAAAAAAcAAsAAgACAAAAAAAcAAwAAgACAAAAAAAcAA0AAgACAAAAAAAcAA4AAgACAAAAAAAcAA8AAgACAAAAAAAcABAAAgACAAAAAAAcABEAAgACAAAAAAAcABIAAgACAAAAAAAcABMAAgACAAAAAAAdAAAAAgACAAAAAAAdAAEAAgACAAAAAAAdAAIAAgACAAAAAAAdAAMAAgACAAAAAAAdAAQAAgACAAAAAAAdAAUAAgACAAAAAAAdAAYAAgACAAAAAAAdAAcAAgACAAAAAAAdAAgAAgACAAAAAAAdAAkAAgACAAAAAAAdAAoAAgACAAAAAAAdAAsAAgACAAAAAAAdAAwAAgACAAAAAAAdAA0AAgACAAAAAAAdAA4AAgACAAAAAAAdAA8AAgACAAAAAAAdABAAAgACAAAAAAAdABEAAgACAAAAAAAdABIAAgACAAAAAAAdABMAAgACAAAAAAAeAAAAAgACAAAAAAAeAAEAAgACAAAAAAAeAAIAAgACAAAAAAAeAAMAAgACAAAAAAAeAAQAAgACAAAAAAAeAAUAAgACAAAAAAAeAAYAAgACAAAAAAAeAAcAAgACAAAAAAAeAAgAAgACAAAAAAAeAAkAAgACAAAAAAAeAAoAAgACAAAAAAAeAAsAAgACAAAAAAAeAAwAAgACAAAAAAAeAA0AAgACAAAAAAAeAA4AAgACAAAAAAAeAA8AAgACAAAAAAAeABAAAgACAAAAAAAeABEAAgACAAAAAAAeABIAAgACAAAAAAAeABMAAgACAAAAAAAfAAAAAgACAAAAAAAfAAEAAgACAAAAAAAfAAIAAgACAAAAAAAfAAMAAgACAAAAAAAfAAQAAgACAAAAAAAfAAUAAgACAAAAAAAfAAYAAgACAAAAAAAfAAcAAgACAAAAAAAfAAgAAgACAAAAAAAfAAkAAgACAAAAAAAfAAoAAgACAAAAAAAfAAsAAgACAAAAAAAfAAwAAgACAAAAAAAfAA0AAgACAAAAAAAfAA4AAgACAAAAAAAfAA8AAgACAAAAAAAfABAAAgACAAAAAAAfABEAAgACAAAAAAAfABIAAgACAAAAAAAfABMAAgACAAAAAAAgAAAAAgACAAAAAAAgAAEAAgACAAAAAAAgAAIAAgACAAAAAAAgAAMAAgACAAAAAAAgAAQAAgACAAAAAAAgAAUAAgACAAAAAAAgAAYAAgACAAAAAAAgAAcAAgACAAAAAAAgAAgAAgACAAAAAAAgAAkAAgACAAAAAAAgAAoAAgACAAAAAAAgAAsAAgACAAAAAAAgAAwAAgACAAAAAAAgAA0AAgACAAAAAAAgAA4AAgACAAAAAAAgAA8AAgACAAAAAAAgABAAAgACAAAAAAAgABEAAgACAAAAAAAgABIAAgACAAAAAAAgABMAAgACAAAAAAAhAAAAAgACAAAAAAAhAAEAAgACAAAAAAAhAAIAAgACAAAAAAAhAAMAAgACAAAAAAAhAAQAAgACAAAAAAAhAAUAAgACAAAAAAAhAAYAAgACAAAAAAAhAAcAAgACAAAAAAAhAAgAAgACAAAAAAAhAAkAAgACAAAAAAAhAAoAAgACAAAAAAAhAAsAAgACAAAAAAAhAAwAAgACAAAAAAAhAA0AAgACAAAAAAAhAA4AAgACAAAAAAAhAA8AAgACAAAAAAAhABAAAgAAAAAAAAAhABEAAgAAAAAAAAAhABIAAgACAAAAAAAhABMAAgACAAAAAAAiAAAAAgACAAAAAAAiAAEAAgAAAAAAAAAiAAIAAgAAAAAAAAAiAAMAAgAAAAAAAAAiAAQAAgAAAAAAAAAiAAUAAgAAAAAAAAAiAAYAAgAAAAAAAAAiAAcAAgAAAAAAAAAiAAgAAgAAAAAAAAAiAAkAAgAAAAAAAAAiAAoAAgAAAAAAAAAiAAsAAgAAAAAAAAAiAAwAAgAAAAAAAAAiAA0AAgAAAAAAAAAiAA4AAgAAAAAAAAAiAA8AAgAAAAAAAAAiABAAAgAAAAAAAAAiABEAAgAAAAAAAAAiABIAAgAAAAAAAAAiABMAAgACAAAAAAAjAAAAAgACAAAAAAAjAAEAAgACAAAAAAAjAAIAAgACAAAAAAAjAAMAAgACAAAAAAAjAAQAAgACAAAAAAAjAAUAAgACAAAAAAAjAAYAAgACAAAAAAAjAAcAAgACAAAAAAAjAAgAAgACAAAAAAAjAAkAAgACAAAAAAAjAAoAAgACAAAAAAAjAAsAAgACAAAAAAAjAAwAAgACAAAAAAAjAA0AAgACAAAAAAAjAA4AAgACAAAAAAAjAA8AAgACAAAAAAAjABAAAgACAAAAAAAjABEAAgACAAAAAAAjABIAAgACAAAAAAAjABMAAgACAAAAAAA=")
tile_set = ExtResource("2_1fktl")
metadata/_edit_lock_ = true

[connection signal="toggled" from="ColorRect/Mute" to="." method="_on_mute_toggled"]
[connection signal="value_changed" from="ColorRect/Volume" to="." method="_on_volume_value_changed"]
[connection signal="value_changed" from="ColorRect/Brightness" to="." method="_on_brightness_value_changed"]
[connection signal="pressed" from="ColorRect/Back Button" to="." method="_on_back_button_pressed"]
